<resources>
    <string name="app_name">AccountingExpert</string>
    <string name="title_home">概览</string>
    <string name="title_editor">记一笔</string>
    <string name="agree">agree</string>
    <string name="disagree">disagree</string>
    <string name="editor_dialog">add record</string>
    <string name="title_account">账户</string>
    <string name="title_findings">发现</string>
    <string name="title_mine">我的</string>

    <string-array name="chinese_week_string_array">
        <item>周日</item>
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
    </string-array>
</resources>