<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/account"
        android:title="@string/title_account" />

    <item
        android:id="@+id/navigation_editor"
        android:icon="@drawable/edit"
        android:title="@string/title_editor" />

    <item
        android:id="@+id/navigation_findings"
        android:icon="@drawable/pie_chart"
        android:title="@string/title_findings" />

    <item
        android:id="@+id/navigation_mine"
        android:icon="@drawable/setting"
        android:title="@string/title_mine" />
</menu>