<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.faultaddr.accountingexpert.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_home_detail"
            app:destination="@id/navigation_home_detail"
            />
    </fragment>

    <fragment
        android:id="@+id/navigation_home_detail"
        android:name="com.faultaddr.accountingexpert.ui.home.HomeDetailFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_detail">

        <action
            android:id="@+id/action_home"
            app:destination="@id/navigation_home"
            />
    </fragment>

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.faultaddr.accountingexpert.ui.editor.EditorFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_editor"
        android:name="com.faultaddr.accountingexpert.ui.editor.EditorFragment"
        android:label="@string/title_editor"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/navigation_findings"
        android:name="com.faultaddr.accountingexpert.ui.settings.SettingsFragment"
        android:label="@string/title_findings"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_mine"
        android:name="com.faultaddr.accountingexpert.ui.settings.SettingsFragment"
        android:label="@string/title_mine"
        tools:layout="@layout/fragment_notifications" />
</navigation>